@@ -6,6 +6,7 @@ dl 0.8:
 * Fix ticket expiration when using sqlite3 (table locking issues).
 * Do not purge tickets prematurely after an unsuccessful download.
 * Purge tickets immediately after the download, when possible.
+* useradmin now allows to reset/change user role and password.
 
 
 dl 0.7: 10/03/2010
